--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@blocknote/core": "^0.12.1",
     "@blocknote/react": "^0.12.2",
     "@uiw/react-markdown-preview": "^5.1.1",
+    "axios": "^1.6.8",
+    "boring-avatars": "^1.10.1",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
