--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@blocknote/core": "^0.12.1",
     "@blocknote/react": "^0.12.2",
-    "@uiw/react-markdown-preview": "^5.1.1",
     "axios": "^1.6.8",
     "boring-avatars": "^1.10.1",
     "next": "14.1.3",
@@ -19,6 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "reactflow": "^11.10.4"
   },
